# rag_with_docling_postgres_langchain

./: .env.example  POSTGRES_SETUP.md  README.md  agent.py  docker-compose.yml  load_chunk_embed.py  load_chunk_embed_ingest.py  main.py  pyproject.toml  requirements.txt  tools.py
documents/processed/: abc_activity_field.md  all_chunks.txt  client-review-globalfinance.md  founder_bio.md  mission-and-goals.md  output_implementation-playbook.md  output_meeting-notes-2025-01-15.md  team-handbook.md
notebooks/: docling_test.ipynb  docling_test.py  load_chunk_embed_ingest_test.ipynb  load_chunk_to_langchain_docs.ipynb  load_chunk_to_langchain_docs.py  load_chunk_to_txt.ipynb  streaming_types.ipynb
