[project]
name = "langchain-docling-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.58.0",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.16",
    "langchain[openai]>=1.0.2",
    "numpy>=2.3.4",
    "openai-whisper>=20250625",
    "pgvector>=0.3.6",
    "psycopg>=3.2.12",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "supabase>=2.22.4",
    "vecs>=0.4.5",
]
